# django-drf-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
django_drf_mcp/: __init__.py  apps.py  asgi.py  permissions.py  server.py  tokens.py  urls.py  views.py
django_drf_mcp/management/commands/: runmcp.py
django_mcp/: __init__.py  apps.py  asgi.py  server.py  urls.py  views.py
django_mcp/management/commands/: runmcp.py
